Fix z-index cookie consent
ERM26758

[4.x]

--- a/resources/cookieConsent/MWProviderPrompt.less
+++ b/resources/cookieConsent/MWProviderPrompt.less
@@ -1,7 +1,7 @@
 .bs-privacy-cookie-consent-mw-provider-bar {
 	display: none;
 	width: 100%;
-	z-index: 99;
+	z-index: 1050;
 	position: fixed;
 	bottom: 0;
 	left: 0;
